Workspace form almost done... ISSUE: there is still an issue with positioning SelectOptions in Custom Select

--- a/styles/_theme.sass
+++ b/styles/_theme.sass
@@ -17,6 +17,7 @@ $trello-form-text-secondary: #253858
 // button-color
 $text-color-button-inactive: #8c8c8c
 $text-color-button: #505f79
+$text-color-button-workspace: #a5adba
 
 // anchor color
 $anchor-trello-signature: #298FCA
@@ -62,6 +63,7 @@ $bg-account-aside-left-anchor-hover: #e6e9ed
 $bg-account-aside-left-anchor-active: #e4f0f6
 $account-text-special-purple: #CD8DE5
 $bg-create-hover: #ebecf0
+$bg-workspace-continue-button: #f5f6f7
 
 // card bg
 $bg-account-board-card: #0000004d
