Fotter for landing page ..... is under construction

--- a/styles/home.module.sass
+++ b/styles/home.module.sass
@@ -38,11 +38,11 @@
   justify-content: center
 
 .footer
+  margin-block-start: 20px
   width: 100%
   border-top: 1px solid #eaeaea
-  display: flex
-  justify-content: center
-  align-items: center
+  padding: 20px 0
+  background-color: theme.$bg-fullfeatured-footer
 
 // --------------------------------------------------
 // media conditions
