--- a/styles/_theme.sass
+++ b/styles/_theme.sass
@@ -52,6 +52,7 @@ $account-text-secondary: #091e42a8
 $account-text-secondary-hover: #091e42c4
 $text-tertiary: #B3BAC5
 $text-account-aside-left-anchor-active: #0079BF
+$text-fullfeatured-footer: #374563
 
 // background color 
 $bg-account-anchor-button: #091e420a
@@ -64,6 +65,7 @@ $bg-account-aside-left-anchor-active: #e4f0f6
 $account-text-special-purple: #CD8DE5
 $bg-create-hover: #ebecf0
 $bg-workspace-continue-button: #f5f6f7
+$bg-fullfeatured-footer: #f4f5f7
 
 // card bg
 $bg-account-board-card: #0000004d
